@@ -1013,6 +1013,47 @@ literal|" instance to a LockFactory"
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+name|lockFactory
+operator|instanceof
+name|NativeFSLockFactory
+condition|)
+block|{
+operator|(
+operator|(
+name|NativeFSLockFactory
+operator|)
+name|lockFactory
+operator|)
+operator|.
+name|setLockDir
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|lockFactory
+operator|instanceof
+name|SimpleFSLockFactory
+condition|)
+block|{
+operator|(
+operator|(
+name|SimpleFSLockFactory
+operator|)
+name|lockFactory
+operator|)
+operator|.
+name|setLockDir
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
