@@ -903,6 +903,8 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// Verify: setting custom lock factory class (as system property) works:
+comment|// Verify: all 4 builtin LockFactory implementations are
+comment|//         settable this way
 comment|// Verify: FSDirectory does basic locking correctly
 DECL|method|testLockClassProperty
 specifier|public
@@ -917,11 +919,19 @@ name|indexDirName
 init|=
 literal|"index.TestLockFactory3"
 decl_stmt|;
+name|String
+name|prpName
+init|=
+literal|"org.apache.lucene.store.FSDirectoryLockFactoryClass"
+decl_stmt|;
+try|try
+block|{
+comment|// NoLockFactory:
 name|System
 operator|.
 name|setProperty
 argument_list|(
-literal|"org.apache.lucene.store.FSDirectoryLockFactoryClass"
+name|prpName
 argument_list|,
 literal|"org.apache.lucene.store.NoLockFactory"
 argument_list|)
@@ -969,8 +979,186 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// SingleInstanceLockFactory:
+name|System
+operator|.
+name|setProperty
+argument_list|(
+name|prpName
+argument_list|,
+literal|"org.apache.lucene.store.SingleInstanceLockFactory"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|indexDirName
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"FSDirectory did not use correct LockFactory: got "
+operator|+
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|getLockFactory
+argument_list|()
+argument_list|,
+name|SingleInstanceLockFactory
+operator|.
+name|class
+operator|.
+name|isInstance
+argument_list|(
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|getLockFactory
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// NativeFSLockFactory:
+name|System
+operator|.
+name|setProperty
+argument_list|(
+name|prpName
+argument_list|,
+literal|"org.apache.lucene.store.NativeFSLockFactory"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|indexDirName
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"FSDirectory did not use correct LockFactory: got "
+operator|+
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|getLockFactory
+argument_list|()
+argument_list|,
+name|NativeFSLockFactory
+operator|.
+name|class
+operator|.
+name|isInstance
+argument_list|(
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|getLockFactory
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// SimpleFSLockFactory:
+name|System
+operator|.
+name|setProperty
+argument_list|(
+name|prpName
+argument_list|,
+literal|"org.apache.lucene.store.SimpleFSLockFactory"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|indexDirName
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"FSDirectory did not use correct LockFactory: got "
+operator|+
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|getLockFactory
+argument_list|()
+argument_list|,
+name|SimpleFSLockFactory
+operator|.
+name|class
+operator|.
+name|isInstance
+argument_list|(
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|getLockFactory
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
 comment|// Put back to the correct default for subsequent tests:
-comment|// System.clearProperty("org.apache.lucene.store.FSDirectoryLockFactoryClass");
 name|System
 operator|.
 name|setProperty
@@ -980,11 +1168,7 @@ argument_list|,
 literal|""
 argument_list|)
 expr_stmt|;
-name|writer
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
+block|}
 comment|// Cleanup
 name|rmDir
 argument_list|(
